--- a/Federico_Ariton_sba22090_Lvl8_CA2_Integrated.ipynb
+++ b/Federico_Ariton_sba22090_Lvl8_CA2_Integrated.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fa310d76",
+   "id": "ae5b103f",
    "metadata": {},
    "source": [
     "# Federico Ariton\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2983d42f",
+   "id": "f79f12a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a330f825",
+   "id": "21eddf2b",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "411c8009",
+   "id": "e2eced33",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8caea0dc",
+   "id": "c462691e",
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4a271b3b",
+   "id": "153451f0",
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "363ea6fd",
+   "id": "00feb2bf",
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1265,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8dc8230b",
+   "id": "79b10552",
    "metadata": {},
    "outputs": [
     {
@@ -1325,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "89421d85",
+   "id": "9f4f30fd",
    "metadata": {},
    "outputs": [
     {
@@ -1382,7 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7b930f5a",
+   "id": "c00cc3f2",
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1497,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6eed85c7",
+   "id": "831bc4b5",
    "metadata": {
     "scrolled": true
    },
@@ -1531,7 +1531,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "660acb2c",
+   "id": "ea3a2279",
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "747704e4",
+   "id": "3ac9a664",
    "metadata": {},
    "outputs": [
     {
@@ -1615,7 +1615,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1dd3899b",
+   "id": "b417477e",
    "metadata": {},
    "outputs": [
     {
@@ -1644,7 +1644,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4d9d8ae7",
+   "id": "b47ab514",
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1670,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "68ef9b61",
+   "id": "be1179f9",
    "metadata": {},
    "outputs": [
     {
@@ -1738,7 +1738,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9aaaf0da",
+   "id": "8f3aaf37",
    "metadata": {},
    "outputs": [
     {
@@ -1760,7 +1760,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "21113beb",
+   "id": "46b75bc2",
    "metadata": {},
    "outputs": [
     {
@@ -1879,7 +1879,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "0fc5c468",
+   "id": "0f524705",
    "metadata": {},
    "outputs": [
     {
@@ -1924,7 +1924,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9c891b32",
+   "id": "2e655791",
    "metadata": {},
    "outputs": [
     {
@@ -2192,7 +2192,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "44ec9df6",
+   "id": "df248ecc",
    "metadata": {},
    "outputs": [
     {
@@ -2255,7 +2255,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "39b639fc",
+   "id": "69ebe0f5",
    "metadata": {},
    "outputs": [
     {
@@ -2287,7 +2287,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "769d4450",
+   "id": "5c6f30aa",
    "metadata": {},
    "outputs": [
     {
@@ -2343,7 +2343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fd0d09b",
+   "id": "1c59f88c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2353,7 +2353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb066325",
+   "id": "b753a24e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2383,7 +2383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa95233c",
+   "id": "84823779",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2411,7 +2411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be749c10",
+   "id": "c8d4e0f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2489,7 +2489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec35c6b8",
+   "id": "46f705f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2499,7 +2499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32b821cc",
+   "id": "681d72c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2569,7 +2569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e24b026",
+   "id": "75c9cb9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2579,7 +2579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c779130",
+   "id": "7022e649",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2628,7 +2628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e231022",
+   "id": "c7a03d8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2661,8 +2661,10 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "c0ac22ff",
-   "metadata": {},
+   "id": "69e4b4da",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -3072,7 +3074,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "284f163e",
+   "id": "537effeb",
    "metadata": {},
    "outputs": [
     {
@@ -3420,7 +3422,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b66e98c7",
+   "id": "00e469ae",
    "metadata": {},
    "outputs": [
     {
@@ -3540,7 +3542,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "3a1cf7b6",
+   "id": "16e0b053",
    "metadata": {},
    "outputs": [
     {
@@ -3619,8 +3621,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "id": "645556d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(F_onewayResult(statistic=2.9520556388377326, pvalue=0.05254259606306379),\n",
+       " TtestResult(statistic=0.12166271653601471, pvalue=0.9031827927566072, df=1468.0))"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import scipy.stats as stats\n",
+    "\n",
+    "# ANOVA Test: Job Satisfaction Across Different Departments\n",
+    "anova_data = Employee[['JobSatisfaction', 'Department']].dropna()\n",
+    "groups = anova_data['Department'].unique()\n",
+    "anova_groups = [anova_data['JobSatisfaction'][anova_data['Department'] == group] for group in groups]\n",
+    "\n",
+    "# Performing the ANOVA test\n",
+    "anova_result = stats.f_oneway(*anova_groups)\n",
+    "\n",
+    "# Independent Samples t-test: Impact of Overtime on Job Satisfaction\n",
+    "ttest_data = Employee[['JobSatisfaction', 'OverTime']].dropna()\n",
+    "overtime_yes = ttest_data['JobSatisfaction'][ttest_data['OverTime'] == 'Yes']\n",
+    "overtime_no = ttest_data['JobSatisfaction'][ttest_data['OverTime'] == 'No']\n",
+    "\n",
+    "# Performing the t-test\n",
+    "ttest_result = stats.ttest_ind(overtime_yes, overtime_no)\n",
+    "\n",
+    "anova_result, ttest_result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f66686fc",
+   "id": "5e9dfede",
    "metadata": {},
    "outputs": [],
    "source": []
